--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 h5py==3.8.0
-transformers==4.34.1
-accelerate==0.23.0
+transformers==4.41.1
+accelerate==0.30.1
 wandb==0.15.4
 optax==0.1.5
 flax==0.8.0
@@ -9,5 +9,7 @@ pandas==2.0.3
 pyahocorasick==2.0.0
 matplotlib==3.7.2
 scikit-learn==1.4.2
-scipy==1.12.0
-datasets
+datasets==2.19.1
+scipy==1.10.1
+jax[cuda12]==0.4.23
+jaxlib[cuda12]==0.4.23
